# erdos-straus-research

./: .gitignore  README.md  analyze_patterns.py  analyze_recursive_failures.py  analyze_uncovered_core.py  attack_1_mod_24.py  automatic_small_factor_lemma_finder.py  compound_factor_family_lemma_finder.py  compound_symbolic_cover.py  cover_uncovered_core.py  diagnose_uncovered.py  erdos_straus.py  family_negative_implication_finder.py  family_negative_obstruction_analyzer.py  negative_condition_relation_analyzer.py  parametric_family_lemma_tester.py  prime_factor_family_lemma_finder.py  prime_set_cover_lemma_finder.py  prove_by_residues.py  pyproject.toml  recursive_core_cover.py  remaining_core_lemma_finder.py  symbolic_cover_engine.py  symbolic_lift_planner.py  symbolic_remainder_cover.py
data/: README.md  attack_1_mod_24_reduced_results.csv  automatic_small_factor_family_summary.csv  automatic_small_factor_rules.csv  candidate_lemma_tests.csv  compound_factor_family_rules.csv  compound_factor_family_summary.csv  compound_symbolic_cover_summary.csv  core_local_cover_rules.csv  core_local_cover_summary.csv  family_negative_implication_summary.csv  family_negative_implications.csv  family_negative_obstruction_details.csv  lifted_coverage_from_mod_2520.csv  lifted_coverage_from_mod_5040.csv  lifted_coverage_from_mod_840.csv  minimal_negative_condition_lemmas.csv  negative_condition_relation_summary.csv  parametric_family_tests.csv  prime_factor_family_summary.csv  prime_factor_family_tests.csv  prime_set_cover_checks.csv  prime_set_rule_groups.csv  results_1000.csv  (+46 more)
(+26 files in other folders)
